honor nowrap, fix admonition labels

--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -35,6 +35,14 @@ pre,
 .listingblock pre {
   padding: .5em;
   background-color: #f8f8f8;
+  word-wrap: break-word;
+}
+
+.literalblock pre.nowrap,
+.listingblock pre.nowrap {
+  white-space: pre;
+  overflow-x: auto;
+  word-wrap: normal;
 }
 
 .listingblock .title {
@@ -43,42 +51,51 @@ pre,
 }
 
 .admonitionblock {
-  table td {
-    border: 0;
-    padding-top: 4px;
-    padding-bottom: 4px;
-  }
+  & > table {
+    td {
+      border: 0;
+      padding-top: 4px;
+      padding-bottom: 4px;
+    }
 
-  table td.icon {
-    width: 1%;
-    border-right: 1px solid #ddd;
-  }
+    td.icon {
+      width: 1%;
+      border-right: 1px solid #ddd;
+      .title {
+        text-transform: uppercase;
+        @extend .label;
+        padding: 4px 6px;
+      }
+    }
 
-  table td.content {
-    width: 99%;
-    padding-left: 20px;
+    td.content {
+      width: 99%;
+      padding-left: 20px;
+    }
   }
+}
 
-  .title {
-    text-transform: uppercase;
-    @extend .label;
-    padding: 4px 6px;
-  }
-
-  .title.warning,
-  .title.caution {
+.admonitionblock.warning,
+.admonitionblock.caution {
+  & > table td.icon .title {
     @extend .label-warning;
   }
+}
 
-  .title.note {
+.admonitionblock.note {
+  & > table td.icon .title {
     @extend .label-info;
   }
+}
 
-  .title.important {
+.admonitionblock.important {
+  & > table td.icon .title {
     @extend .label-important;
   }
+}
 
-  .title.tip {
+.admonitionblock.tip {
+  & > table td.icon .title {
     @extend .label-success;
   }
 }
